When on Eval value

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -58,5 +58,12 @@
                 displayName="Atomic references with primitive types"
                 groupName="Arrow"
                 implementationClass="arrow.intellij.wrong.AtomicPrimitiveInspection"/>
+        <localInspection
+                language="kotlin"
+                enabledByDefault="true"
+                level="WARNING"
+                displayName="Atomic references with primitive types"
+                groupName="Arrow"
+                implementationClass="arrow.intellij.wrong.WhenOnEvalInspection"/>
     </extensions>
 </idea-plugin>
